Fix alignment issues and make form cleaner

--- a/style.css
+++ b/style.css
@@ -75,17 +75,19 @@ h1 {
 
 form {
   display: flex;
-  width: 50vw;
-  height: 200px;
+  width: 35vw;
   flex-flow: row wrap;
-  gap: 1.5rem;
-  font-size: 1.5rem;
+  gap: 1rem;
+  font-size: 1rem;
+}
+
+form > div {
+  margin-bottom: 20px;
 }
 
 label {
-  position: relative;
   width: 15rem;
-  margin-bottom: 15px;
+  display: block;
 }
 
 button[type="submit"] {
@@ -97,6 +99,8 @@ button[type="submit"] {
   color: white;
   letter-spacing: -1px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.253);
+  width: 160px;
+  height: 50px;
 }
 
 input {
